# EasyMCU_ESP32S3

./: .gitignore  CMakeLists.txt  README.md  pack_bin.ps1  partitions.csv  partitions_16mb.csv  partitions_8mb.csv  sdkconfig.defaults  sdkconfig.n16r8  sdkconfig.n8r2  sdkconfig.n8r8
main/: CMakeLists.txt  idf_component.yml  main.c
main/easycon/: easycon.c  easycon.h  easycon_script.h
main/hid/: hid_device.c  hid_device.h
main/storage/: storage.c  storage.h
main/uart/: uart_handler.c  uart_handler.h
